i fixed pom